# ceshi1

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  start.sh  start_windows.bat  stop.sh  stop_windows.bat
.streamlit/: config.toml
ashare_replay/: __init__.py  api.py  cli.py  config.py  constants.py  db.py  logging_config.py  schema_validation.py  security.py  simple_server.py  time_utils.py
ashare_replay/providers/: __init__.py  akshare_provider.py  base.py  demo.py  readiness.py  tushare_provider.py
ashare_replay/services/: __init__.py  attribution.py  backtest.py  health.py  leader.py  lifecycle.py  market.py  narrative.py  ops.py  ranking.py  report.py  scheduler.py  utils.py  watchlist.py  weekly.py
ashare_replay/ui/: __init__.py  streamlit_app.py
configs/: default_config.json  demo_config.json
docs/: architecture.md  backup_restore.md  data_dictionary.md  deploy_online.md  status.md  troubleshooting.md  usage.md
fixtures/demo/: README.md  long_history_fixture.json
migrations/: 001_init_postgres.sql  001_init_sqlite.sql
schemas/: report.schema.json
scripts/: check_docker.sh  check_docker_windows.bat  generate_demo_reports.bat  start_api_windows.bat  start_local_windows.bat
tests/: conftest.py  test_health_real_provider.py  test_ops_check.py  test_provider_contract.py  test_ranking_lifecycle_leaders.py  test_report_generation.py  test_scheduler_backtest_quality.py  test_security_schema.py
